better docs and smarter parsing

--- a/test.html
+++ b/test.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
 <script src="system-requirements.js"></script>
 <script>
-    systemRequirements('chrome 20+ or ff 35+ or safari 3+', function () {return true;}, 'http://google.com');
+    console.log(systemRequirements('chrome 20+ or firefox 20+ or safari 5+', function () {return true;}));
 </script>
